# Rotating_3D

./: CMakeLists.txt  Makefile  README.md
include/: Screen.hpp  Triangle.hpp
lib/: CMakeLists.txt
src/: Screen.cpp  main.cpp
